[package]
name = "skyserver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
ws = { package = "rocket_ws", version = "0.1.0" }
serde_json = { version = "1.0.120" }

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
